[gd_scene load_steps=5 format=3 uid="uid://bt25uvuhc6kqf"]

[ext_resource type="PackedScene" uid="uid://bwnjn7t8ceax6" path="res://player.tscn" id="1_exf78"]
[ext_resource type="Script" path="res://game.gd" id="1_hemeh"]
[ext_resource type="PackedScene" uid="uid://dsvn6xljlu423" path="res://obstacle.tscn" id="2_3s7mh"]
[ext_resource type="FontFile" uid="uid://dprey0j673mg2" path="res://assets/fonts/PixelOperator8.ttf" id="4_jlx1g"]

[node name="Game" type="Node2D"]
script = ExtResource("1_hemeh")

[node name="Player" parent="." instance=ExtResource("1_exf78")]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="Obstacle" parent="." instance=ExtResource("2_3s7mh")]
position = Vector2(131, 56)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Score" type="RichTextLabel" parent="."]
offset_left = -132.0
offset_top = -71.0
offset_right = -92.0
offset_bottom = -31.0
theme_override_fonts/normal_font = ExtResource("4_jlx1g")
text = "0"

[connection signal="passed" from="Obstacle" to="." method="_on_obstacle_passed"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_timer_timeout"]
